--- a/temp.html
+++ b/temp.html
@@ -6,32 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        /* .clearfix::before,
-        .clearfix::after {
-            content: '';
-            display: table;
-        }
-        .clearfix::after {
-            clear: both;
-        }
-        .div1 {
-            width: 300px;
-            background-color: red;
-        }
-
-        .div2 {
-            float: left;
-            margin-top: 100px;
-            width: 100px;
-            height: 100px;
-            background-color: blue;
-        } */
 
         .div1 {
+            width: 500px;
+            /* height: 210px; */
             background-color: red;
+            overflow: hidden;
         }
         .div2 {
-            /* float: left; */
+            float: right;
             /* margin-top: 100px; */
             width: 100px;
             height: 100px;
@@ -43,6 +26,26 @@
 <body>
 
     <div class="div1">
+        <div class="div2"></div>
+        <div class="div2"></div>
+        <div class="div2"></div>
+        <div class="div2"></div>
+        <div class="div2"></div>
+        <div class="div2"></div>
+        <div class="div2"></div>
+        <div class="div2"></div>
+        <div class="div2"></div>
+        <div class="div2"></div>
+        <div class="div2"></div>
+        <div class="div2"></div>
+        <div class="div2"></div>
+        <div class="div2"></div>
+        <div class="div2"></div>
+        <div class="div2"></div>
+        <div class="div2"></div>
+        <div class="div2"></div>
+        <div class="div2"></div>
+        <div class="div2"></div>
         <div class="div2"></div>
     </div>
 
