--- a/temp.html
+++ b/temp.html
@@ -14,7 +14,7 @@
             overflow: hidden;
         }
         .div2 {
-            float: right;
+            /* float: right; */
             /* margin-top: 100px; */
             width: 100px;
             height: 100px;
