--- a/temp.html
+++ b/temp.html
@@ -8,14 +8,15 @@
     <style>
 
         .div1 {
-            width: 500px;
-            /* height: 210px; */
-            background-color: red;
-            overflow: hidden;
+            margin: 10px;
+            /* width: 50px;
+            height: 50px;
+            background-color: red; */
+            /* overflow: hidden; */
         }
         .div2 {
-            /* float: right; */
-            /* margin-top: 100px; */
+            /* float: left; */
+            margin-top: 50px;
             width: 100px;
             height: 100px;
             background-color: blue;
@@ -26,27 +27,7 @@
 <body>
 
     <div class="div1">
-        <div class="div2"></div>
-        <div class="div2"></div>
-        <div class="div2"></div>
-        <div class="div2"></div>
-        <div class="div2"></div>
-        <div class="div2"></div>
-        <div class="div2"></div>
-        <div class="div2"></div>
-        <div class="div2"></div>
-        <div class="div2"></div>
-        <div class="div2"></div>
-        <div class="div2"></div>
-        <div class="div2"></div>
-        <div class="div2"></div>
-        <div class="div2"></div>
-        <div class="div2"></div>
-        <div class="div2"></div>
-        <div class="div2"></div>
-        <div class="div2"></div>
-        <div class="div2"></div>
-        <div class="div2"></div>
+        
     </div>
 
 </body>
