--- a/temp.html
+++ b/temp.html
@@ -6,17 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-
         .div1 {
-            margin: 10px;
-            /* width: 50px;
+            /* margin: 10px; */
+            /* width: 50px; */
             height: 50px;
-            background-color: red; */
+            background-color: red;
             /* overflow: hidden; */
         }
+
         .div2 {
             /* float: left; */
-            margin-top: 50px;
             width: 100px;
             height: 100px;
             background-color: blue;
@@ -27,7 +26,8 @@
 <body>
 
     <div class="div1">
-        
+        aaa
+        <div class="div2"></div>
     </div>
 
 </body>
