--- a/shop1/index.html
+++ b/shop1/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,7 +8,16 @@
     <link rel="stylesheet" href="./css/base.css">
     <link rel="stylesheet" href="./css/index.css">
 </head>
+
 <body>
-    <div class="wrapper">1</div>
+    <div class="header">
+        <div class="wrapper">
+            <div class="logo">logo</div>
+            <div class="nav">nav</div>
+            <div class="search">search</div>
+            <div class="user">user</div>
+        </div>
+    </div>
 </body>
+
 </html>
