--- a/shop1/index.html
+++ b/shop1/index.html
@@ -12,7 +12,11 @@
 <body>
     <div class="header">
         <div class="wrapper">
-            <div class="logo">logo</div>
+            <div class="logo">
+                <h1>
+                    <a href="#">Shop</a>
+                </h1>
+            </div>
             <div class="nav">nav</div>
             <div class="search">search</div>
             <div class="user">user</div>
