--- a/shop1/index.html
+++ b/shop1/index.html
@@ -17,7 +17,13 @@
                     <a href="#">Shop</a>
                 </h1>
             </div>
-            <div class="nav">nav</div>
+            <div class="nav">
+                <ul>
+                    <li><a href="#">首页</a></li>
+                    <li><a href="#">课程</a></li>
+                    <li><a href="#">职业规划</a></li>
+                </ul>
+            </div>
             <div class="search">search</div>
             <div class="user">user</div>
         </div>
