--- a/shop1/index.html
+++ b/shop1/index.html
@@ -19,12 +19,15 @@
             </div>
             <div class="nav">
                 <ul>
-                    <li><a href="#">首页</a></li>
+                    <li><a href="#" class="active">首页</a></li>
                     <li><a href="#">课程</a></li>
                     <li><a href="#">职业规划</a></li>
                 </ul>
             </div>
-            <div class="search">search</div>
+            <div class="search">
+                <input type="text" placeholder="请输入关键词">
+                <a href="#"></a>
+            </div>
             <div class="user">user</div>
         </div>
     </div>
