--- a/test.html
+++ b/test.html
@@ -6,46 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>test</title>
     <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
+        body {
+            font: 14px;
         }
 
-        li {
-            list-style: none;
+        input::placeholder {
+            /* font-size: 14px; */
         }
-
-        .header .nav ul {
-            display: flex;
-            justify-content: space-between;
-        }
-
-        .header .nav ul li {
-            /* margin-right: 24px; */
-            background-color: orange;
-        }
-
-        /* .header .nav ul a {
-            display: block;
-            padding: 6px 8px;
-            font-size: 19px;
-            line-height: 27px;
-        } */
     </style>
 </head>
 
 <body>
-    <div class="header">
-        <div class="wrapper">
-            <div class="nav">
-                <ul>
-                    <li><a href="#">首页</a></li>
-                    <li><a href="#">课程</a></li>
-                    <li><a href="#">职业规划</a></li>
-                </ul>
-            </div>
-        </div>
+    <div class="father">
+        <input type="text" placeholder="aaa">
     </div>
 </body>
 
