--- a/test.html
+++ b/test.html
@@ -5,9 +5,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>test</title>
+    <link rel="stylesheet" href="https://unpkg.com/normalize.css"> 
     <style>
         body {
-            font: 14px;
+            font-size: 140px;
+            color: red;
+            font-family: sans-serif;
+        }
+
+        input {
+            /* font-size: 140px;
+            color: red;
+            font-family: serif;
+            font-style: italic;
+            font-weight: bold;
+            line-height: 3; */
         }
 
         input::placeholder {
