--- a/shop1/index.html
+++ b/shop1/index.html
@@ -28,7 +28,12 @@
                 <input type="text" placeholder="请输入关键词">
                 <a href="#"></a>
             </div>
-            <div class="user">user</div>
+            <div class="user">
+                <a href="#">
+                    <img src="./uploads/user.png">
+                    <span>播仔学前端</span>
+                </a>
+            </div>
         </div>
     </div>
 </body>
