--- a/test.html
+++ b/test.html
@@ -7,30 +7,18 @@
     <title>test</title>
     <link rel="stylesheet" href="https://unpkg.com/normalize.css"> 
     <style>
-        body {
-            font-size: 140px;
-            color: red;
-            font-family: sans-serif;
+        .father {
+            background-color: pink;
         }
-
-        input {
-            /* font-size: 140px;
-            color: red;
-            font-family: serif;
-            font-style: italic;
-            font-weight: bold;
-            line-height: 3; */
-        }
-
-        input::placeholder {
-            /* font-size: 14px; */
+        img {
+            vertical-align: middle;
         }
     </style>
 </head>
 
 <body>
     <div class="father">
-        <input type="text" placeholder="aaa">
+        <img src="./shop1/images/search.png" alt="">x
     </div>
 </body>
 
