--- a/shop1/index.html
+++ b/shop1/index.html
@@ -36,6 +36,24 @@
             </div>
         </div>
     </div>
+    <div class="banner">
+        <div class="wrapper">
+            <div class="left">
+                <ul>
+                    <li><a href="#">前端开发</a></li>
+                    <li><a href="#">前端开发</a></li>
+                    <li><a href="#">前端开发</a></li>
+                    <li><a href="#">前端开发</a></li>
+                    <li><a href="#">前端开发</a></li>
+                    <li><a href="#">前端开发</a></li>
+                    <li><a href="#">前端开发</a></li>
+                    <li><a href="#">前端开发</a></li>
+                    <li><a href="#">前端开发</a></li>
+                </ul>
+            </div>
+            <div class="right">right</div>
+        </div>
+    </div>
 </body>
 
 </html>
