--- a/shop1/index.html
+++ b/shop1/index.html
@@ -41,14 +41,14 @@
             <div class="left">
                 <ul>
                     <li><a href="#">前端开发</a></li>
-                    <li><a href="#">前端开发</a></li>
-                    <li><a href="#">前端开发</a></li>
-                    <li><a href="#">前端开发</a></li>
-                    <li><a href="#">前端开发</a></li>
-                    <li><a href="#">前端开发</a></li>
-                    <li><a href="#">前端开发</a></li>
-                    <li><a href="#">前端开发</a></li>
-                    <li><a href="#">前端开发</a></li>
+                    <li><a href="#">后端开发</a></li>
+                    <li><a href="#">移动开发</a></li>
+                    <li><a href="#">人工智能</a></li>
+                    <li><a href="#">商业预测</a></li>
+                    <li><a href="#">云计算&大数据</a></li>
+                    <li><a href="#">运维&测试</a></li>
+                    <li><a href="#">UI设计</a></li>
+                    <li><a href="#">产品</a></li>
                 </ul>
             </div>
             <div class="right">right</div>
