--- a/test.html
+++ b/test.html
@@ -13,12 +13,18 @@
         img {
             vertical-align: middle;
         }
+
+        input::placeholder {
+            /* color: red;
+            font-size: 20px; */
+        }
     </style>
 </head>
 
 <body>
     <div class="father">
         <img src="./shop1/images/search.png" alt="">x
+        <input type="text" placeholder="USA">
     </div>
 </body>
 
