--- a/shop1/index.html
+++ b/shop1/index.html
@@ -51,7 +51,29 @@
                     <li><a href="#">产品</a></li>
                 </ul>
             </div>
-            <div class="right">right</div>
+            <div class="right">
+                <h3>我的课程表</h3>
+                <div class="content">
+                    <dl>
+                        <dt>数据可视化课程</dt>
+                        <dd>
+                            <span>正在学习</span>-<strong>echarts使用步骤</strong>
+                        </dd>
+                    </dl>
+                    <dl>
+                        <dt>Vue3医疗项目课程</dt>
+                        <dd>
+                            <span>正在学习</span>-<strong>认识组合式API</strong>
+                        </dd>
+                    </dl>
+                    <dl>
+                        <dt>React核心技术课程</dt>
+                        <dd>
+                            <span>正在学习</span>-<strong>rudex配合TS使用</strong>
+                        </dd>
+                    </dl>
+                </div>
+            </div>
         </div>
     </div>
 </body>
