--- a/shop1/index.html
+++ b/shop1/index.html
@@ -36,6 +36,7 @@
             </div>
         </div>
     </div>
+
     <div class="banner">
         <div class="wrapper">
             <div class="left">
@@ -77,6 +78,7 @@
             </div>
         </div>
     </div>
+
     <div class="recommend wrapper">
         <h3>精品推荐</h3>
         <ul>
@@ -91,6 +93,13 @@
             <li><a href="#">React</a></li>
         </ul>
         <a href="#" class="modify">修改兴趣</a>
+    </div>
+
+    <div class="course wrapper">
+        <div class="hd">
+            <h3>精品推荐</h3>
+            <a href="" class="more">查看全部</a>
+        </div>
     </div>
 </body>
 
