--- a/shop1/index.html
+++ b/shop1/index.html
@@ -100,6 +100,120 @@
             <h3>精品推荐</h3>
             <a href="" class="more">查看全部</a>
         </div>
+        <div class="bd">
+            <ul>
+                <li>
+                    <a href="#">
+                        <div class="pic">
+                            <img src="uploads/course01.png">
+                        </div>
+                        <div class="text">
+                            <h4>JavaScript数据看板项目实战</h4>
+                            <p><span>高级</span> · <i>1125</i>人在学习</p>
+                        </div>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <div class="pic">
+                            <img src="uploads/course02.png">
+                        </div>
+                        <div class="text">
+                            <h4>Vue.js实战——面经全端项目</h4>
+                            <p><span>高级</span> · <i>2726</i>人在学习</p>
+                        </div>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <div class="pic">
+                            <img src="uploads/course03.png">
+                        </div>
+                        <div class="text">
+                            <h4>玩转Vue全家桶，iHRM人力资源项目</h4>
+                            <p><span>高级</span> · <i>9456</i>人在学习</p>
+                        </div>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <div class="pic">
+                            <img src="uploads/course04.png">
+                        </div>
+                        <div class="text">
+                            <h4>Vue.js实战医疗项目——优医问诊</h4>
+                            <p><span>高级</span> · <i>7192</i>人在学习</p>
+                        </div>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <div class="pic">
+                            <img src="uploads/course05.png">
+                        </div>
+                        <div class="text">
+                            <h4>小程序实战：小兔鲜电商小程序项目</h4>
+                            <p><span>高级</span> · <i>2703</i>人在学习</p>
+                        </div>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <div class="pic">
+                            <img src="uploads/course06.png">
+                        </div>
+                        <div class="text">
+                            <h4>前端框架Flutter开发实战</h4>
+                            <p><span>高级</span> · <i>2841</i>人在学习</p>
+                        </div>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <div class="pic">
+                            <img src="uploads/course07.png">
+                        </div>
+                        <div class="text">
+                            <h4>熟练使用React.js——极客园H5项目</h4>
+                            <p><span>高级</span> · <i>95682</i>人在学习</p>
+                        </div>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <div class="pic">
+                            <img src="uploads/course08.png">
+                        </div>
+                        <div class="text">
+                            <h4>熟练使用React.js——极客园PC端项目</h4>
+                            <p><span>高级</span> · <i>904</i>人在学习</p>
+                        </div>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <div class="pic">
+                            <img src="uploads/course09.png">
+                        </div>
+                        <div class="text">
+                            <h4>前端实用技术，Fetch API 实战</h4>
+                            <p><span>高级</span> · <i>1516</i>人在学习</p>
+                        </div>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <div class="pic">
+                            <img src="uploads/course10.png">
+                        </div>
+                        <div class="text">
+                            <h4>前端高级Node.js零基础入门教程</h4>
+                            <p><span>高级</span> · <i>2766</i>人在学习</p>
+                        </div>
+                    </a>
+                </li>
+            </ul>
+        </div>
     </div>
 </body>
 
