--- a/test.html
+++ b/test.html
@@ -4,27 +4,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>test</title>
-    <link rel="stylesheet" href="https://unpkg.com/normalize.css"> 
+    <title>Document</title>
     <style>
-        .father {
-            background-color: pink;
-        }
-        img {
-            vertical-align: middle;
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
         }
 
-        input::placeholder {
-            /* color: red;
-            font-size: 20px; */
+        ul {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-between;
         }
     </style>
 </head>
 
 <body>
     <div class="father">
-        <img src="./shop1/images/search.png" alt="">x
-        <input type="text" placeholder="USA">
+        <ul>
+            <li>aaaaaa</li>
+            <li>aaaaaa</li>
+            <li>aaaaaa</li>
+            <li>aaaaaa</li>
+            <li>aaaaaa</li>
+            <li>aaaaaa</li>
+        </ul>
+        <div></div>
+        <div></div>
+        <div></div>
     </div>
 </body>
 
