--- a/test.html
+++ b/test.html
@@ -6,33 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        * {
+        /* * {
             margin: 0;
             padding: 0;
             box-sizing: border-box;
-        }
+        } */
 
-        ul {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: space-between;
+        div {
+            width: 100px;
+            height: 100px;
+            background-color: pink;
+            border: 1px solid black;
         }
     </style>
 </head>
 
 <body>
-    <div class="father">
-        <ul>
-            <li>aaaaaa</li>
-            <li>aaaaaa</li>
-            <li>aaaaaa</li>
-            <li>aaaaaa</li>
-            <li>aaaaaa</li>
-            <li>aaaaaa</li>
-        </ul>
-        <div></div>
-        <div></div>
-        <div></div>
+    <div>
+        aaa
     </div>
 </body>
 
