--- a/test.html
+++ b/test.html
@@ -6,19 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>test</title>
     <style>
-        div {
-            width: 102px;
-            height: 102px;
-            background-color: pink;
-            border: 1px solid black;
-            box-sizing: border-box;
-        }
+
     </style>
 </head>
 
 <body>
     <div>
-        aaa
+        <img src="./images/banner1.jpg">
     </div>
 </body>
 
