轮播图--左右箭头

--- a/test.html
+++ b/test.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>test</title>
+    <!-- <link rel="stylesheet" href="./shop1/css/base.css"> -->
+     <link rel="stylesheet" href="./0704/fontello/css/fontello.css">
     <style>
 
     </style>
@@ -13,6 +15,8 @@
 <body>
     <div>
         <img src="./images/banner1.jpg">
+        <i class="iconfont-left-open"></i>
+        <i class="iconfont-right-open"></i>
     </div>
 </body>
 
