--- a/xtx-pc/index.html
+++ b/xtx-pc/index.html
@@ -31,6 +31,17 @@
             </ul>
         </div>
     </div>
+
+    <div class="header wrapper">
+        <div class="logo">
+            <h1>
+                <a href="#">小兔鲜儿</a>
+            </h1>
+        </div>
+        <div class="nav">nav</div>
+        <div class="search">search</div>
+        <div class="cart">cart</div>
+    </div>
 </body>
 
 </html>
