--- a/xtx-pc/index.html
+++ b/xtx-pc/index.html
@@ -38,8 +38,23 @@
                 <a href="#">小兔鲜儿</a>
             </h1>
         </div>
-        <div class="nav">nav</div>
+
+        <div class="nav">
+            <ul>
+                <li><a href="#">首页</a></li>
+                <li><a href="#">生鲜</a></li>
+                <li><a href="#">美食</a></li>
+                <li><a href="#">餐厨</a></li>
+                <li><a href="#">电器</a></li>
+                <li><a href="#">居家</a></li>
+                <li><a href="#">洗护</a></li>
+                <li><a href="#">孕婴</a></li>
+                <li><a href="#">服装</a></li>
+            </ul>
+        </div>
+
         <div class="search">search</div>
+        
         <div class="cart">cart</div>
     </div>
 </body>
