--- a/xtx-pc/index.html
+++ b/xtx-pc/index.html
@@ -53,8 +53,11 @@
             </ul>
         </div>
 
-        <div class="search">search</div>
-        
+        <div class="search">
+            <span class="iconfont icon-search"></span>
+            <input type="text" placeholder="搜一搜">
+        </div>
+
         <div class="cart">cart</div>
     </div>
 </body>
