--- a/xtx-pc/index.html
+++ b/xtx-pc/index.html
@@ -58,7 +58,10 @@
             <input type="text" placeholder="搜一搜">
         </div>
 
-        <div class="cart">cart</div>
+        <div class="cart">
+            <span class="iconfont icon-cart-full"></span>
+            <i>2</i>
+        </div>
     </div>
 </body>
 
