--- a/xtx-pc/index.html
+++ b/xtx-pc/index.html
@@ -63,6 +63,31 @@
             <i>2</i>
         </div>
     </div>
+
+    <div class="footer">
+        <div class="service">
+            <ul>
+                <li>
+                    <h5></h5>
+                    <p>价格亲民</p>
+                </li>
+                <li>
+                    <h5></h5>
+                    <p>物流快捷</p>
+                </li>
+                <li>
+                    <h5></h5>
+                    <p>品质新鲜</p>
+                </li>
+                <li>
+                    <h5></h5>
+                    <p>售后无忧</p>
+                </li>
+            </ul>
+        </div>
+        <div class="help">help</div>
+        <div class="copyright">copyright</div>
+    </div>
 </body>
 
 </html>
