--- a/xtx-pc/index.html
+++ b/xtx-pc/index.html
@@ -64,6 +64,16 @@
 		</div>
 	</div>
 
+	<div class="banner">
+		<div class="wrapper">
+			<ul class="pic">
+				<li><a href="#"><img src="./uploads/banner1.png"></a></li>
+				<li><a href="#"><img src="./uploads/banner1.png"></a></li>
+				<li><a href="#"><img src="./uploads/banner1.png"></a></li>
+			</ul>
+		</div>
+	</div>
+
 	<div class="footer">
 		<div class="wrapper">
 			<div class="service">
