--- a/xtx-pc/index.html
+++ b/xtx-pc/index.html
@@ -71,6 +71,89 @@
 				<li><a href="#"><img src="./uploads/banner1.png"></a></li>
 				<li><a href="#"><img src="./uploads/banner1.png"></a></li>
 			</ul>
+
+			<ul class="subnav">
+				<li>
+					<div>
+						<a href="#" class="classify">生鲜</a>
+						<a href="#">水果</a>
+						<a href="#">蔬菜</a>
+					</div>
+					<span class="iconfont icon-arrow-right-bold"></span>
+				</li>
+				<li>
+					<div>
+						<a href="#" class="classify">生鲜</a>
+						<a href="#">水果</a>
+						<a href="#">蔬菜</a>
+					</div>
+					<span class="iconfont icon-arrow-right-bold"></span>
+				</li>
+				<li>
+					<div>
+						<a href="#" class="classify">生鲜</a>
+						<a href="#">水果</a>
+						<a href="#">蔬菜</a>
+					</div>
+					<span class="iconfont icon-arrow-right-bold"></span>
+				</li>
+				<li>
+					<div>
+						<a href="#" class="classify">生鲜</a>
+						<a href="#">水果</a>
+						<a href="#">蔬菜</a>
+					</div>
+					<span class="iconfont icon-arrow-right-bold"></span>
+				</li>
+				<li>
+					<div>
+						<a href="#" class="classify">生鲜</a>
+						<a href="#">水果</a>
+						<a href="#">蔬菜</a>
+					</div>
+					<span class="iconfont icon-arrow-right-bold"></span>
+				</li>
+				<li>
+					<div>
+						<a href="#" class="classify">生鲜</a>
+						<a href="#">水果</a>
+						<a href="#">蔬菜</a>
+					</div>
+					<span class="iconfont icon-arrow-right-bold"></span>
+				</li>
+				<li>
+					<div>
+						<a href="#" class="classify">生鲜</a>
+						<a href="#">水果</a>
+						<a href="#">蔬菜</a>
+					</div>
+					<span class="iconfont icon-arrow-right-bold"></span>
+				</li>
+				<li>
+					<div>
+						<a href="#" class="classify">生鲜</a>
+						<a href="#">水果</a>
+						<a href="#">蔬菜</a>
+					</div>
+					<span class="iconfont icon-arrow-right-bold"></span>
+				</li>
+				<li>
+					<div>
+						<a href="#" class="classify">生鲜</a>
+						<a href="#">水果</a>
+						<a href="#">蔬菜</a>
+					</div>
+					<span class="iconfont icon-arrow-right-bold"></span>
+				</li>
+				<li>
+					<div>
+						<a href="#" class="classify">生鲜</a>
+						<a href="#">水果</a>
+						<a href="#">蔬菜</a>
+					</div>
+					<span class="iconfont icon-arrow-right-bold"></span>
+				</li>
+			</ul>
 		</div>
 	</div>
 
