--- a/xtx-pc/index.html
+++ b/xtx-pc/index.html
@@ -154,6 +154,12 @@
 					<span class="iconfont icon-arrow-right-bold"></span>
 				</li>
 			</ul>
+
+			<ol class="circle-index">
+				<li class="active"><i></i></li>
+				<li><i></i></li>
+				<li><i></i></li>
+			</ol>
 		</div>
 	</div>
 
