--- a/xtx-pc/index.html
+++ b/xtx-pc/index.html
@@ -163,6 +163,22 @@
 		</div>
 	</div>
 
+	<div class="goods wrapper">
+		<div class="title">
+			<div class="left">
+				<h3>新鲜好物</h3>
+				<p>新鲜出炉 品质靠谱</p>
+			</div>
+			<div class="right">
+				<div class="more">
+					<a href="#" class="more">
+						查看全部<span class="iconfont icon-arrow-right-bold"></span>
+					</a>
+				</div>
+			</div>
+		</div>
+	</div>
+
 	<div class="footer">
 		<div class="wrapper">
 			<div class="service">
