--- a/xtx-pc/index.html
+++ b/xtx-pc/index.html
@@ -177,6 +177,55 @@
 				</div>
 			</div>
 		</div>
+
+		<div class="body">
+			<ul>
+				<li>
+					<a href="#">
+						<div class="pic">
+							<img src="./uploads/goods1.png">
+						</div>
+						<div class="text">
+							<h4>KN95级莫兰迪色防护口罩</h4>
+							<p>¥<span class="price">79</span></p>
+						</div>
+					</a>
+				</li>
+				<li>
+					<a href="#">
+						<div class="pic">
+							<img src="./uploads/goods1.png">
+						</div>
+						<div class="text">
+							<h4>KN95级莫兰迪色防护口罩</h4>
+							<p>¥<span class="price">79</span></p>
+						</div>
+					</a>
+				</li>
+				<li>
+					<a href="#">
+						<div class="pic">
+							<img src="./uploads/goods1.png">
+						</div>
+						<div class="text">
+							<h4>KN95级莫兰迪色防护口罩</h4>
+							<p>¥<span class="price">79</span></p>
+						</div>
+					</a>
+				</li>
+				<li>
+					<a href="#">
+						<div class="pic">
+							<img src="./uploads/goods1.png">
+						</div>
+						<div class="text">
+							<h4>KN95级莫兰迪色防护口罩</h4>
+							<p>¥<span class="price">79</span></p>
+						</div>
+					</a>
+				</li>
+			</ul>
+		</div>
 	</div>
 
 	<div class="footer">
