--- a/xtx-pc/index.html
+++ b/xtx-pc/index.html
@@ -228,6 +228,64 @@
 		</div>
 	</div>
 
+	<div class="recommend wrapper">
+		<div class="title">
+			<div class="left">
+				<h3>人气推荐</h3>
+				<p>人气爆款 不容错过</p>
+			</div>
+		</div>
+
+		<div class="body">
+			<ul>
+				<li>
+					<a href="#">
+						<div class="pic">
+							<img src="./uploads/recommend1.png">
+						</div>
+						<div class="text">
+							<h4>特惠推荐</h4>
+							<p>我猜得到 你的需要</p>
+						</div>
+					</a>
+				</li>
+				<li>
+					<a href="#">
+						<div class="pic">
+							<img src="./uploads/recommend1.png">
+						</div>
+						<div class="text">
+							<h4>特惠推荐</h4>
+							<p>我猜得到 你的需要</p>
+						</div>
+					</a>
+				</li>
+				<li>
+					<a href="#">
+						<div class="pic">
+							<img src="./uploads/recommend1.png">
+						</div>
+						<div class="text">
+							<h4>特惠推荐</h4>
+							<p>我猜得到 你的需要</p>
+						</div>
+					</a>
+				</li>
+				<li>
+					<a href="#">
+						<div class="pic">
+							<img src="./uploads/recommend1.png">
+						</div>
+						<div class="text">
+							<h4>特惠推荐</h4>
+							<p>我猜得到 你的需要</p>
+						</div>
+					</a>
+				</li>
+			</ul>
+		</div>
+	</div>
+
 	<div class="footer">
 		<div class="wrapper">
 			<div class="service">
