--- a/xtx-pc/index.html
+++ b/xtx-pc/index.html
@@ -286,6 +286,55 @@
 		</div>
 	</div>
 
+	<div class="brand">
+		<div class="wrapper">
+			<div class="title">
+				<div class="left">
+					<h3>热门品牌</h3>
+					<p>国际经典 品质认证</p>
+				</div>
+				<div class="button">
+					<div class="prev">
+						<div class="iconfont icon-arrow-left-bold"></div>
+					</div>
+					<div class="next">
+						<div class="iconfont icon-arrow-right-bold"></div>
+					</div>
+				</div>
+			</div>
+
+			<div class="body">
+				<ul>
+					<li>
+						<a href="#">
+							<img src="./uploads/hot1.png">
+						</a>
+					</li>
+					<li>
+						<a href="#">
+							<img src="./uploads/hot1.png">
+						</a>
+					</li>
+					<li>
+						<a href="#">
+							<img src="./uploads/hot1.png">
+						</a>
+					</li>
+					<li>
+						<a href="#">
+							<img src="./uploads/hot1.png">
+						</a>
+					</li>
+					<li>
+						<a href="#">
+							<img src="./uploads/hot1.png">
+						</a>
+					</li>
+				</ul>
+			</div>
+		</div>
+	</div>
+
 	<div class="footer">
 		<div class="wrapper">
 			<div class="service">
