--- a/xtx-pc/index.html
+++ b/xtx-pc/index.html
@@ -335,6 +335,93 @@
 		</div>
 	</div>
 
+	<div class="fresh wrapper">
+		<div class="title">
+			<div class="left">
+				<h3>生鲜</h3>
+			</div>
+			<div class="right">
+				<ul class="classify">
+					<li class="active">
+						<a href="#">热门</a>
+					</li>
+					<li>
+						<a href="#">热门</a>
+					</li>
+					<li>
+						<a href="#">热门</a>
+					</li>
+					<li>
+						<a href="#">热门</a>
+					</li>
+					<li>
+						<a href="#">热门</a>
+					</li>
+					<li>
+						<a href="#">热门</a>
+					</li>
+					<li>
+						<a href="#">热门</a>
+					</li>
+				</ul>
+				<div class="more">
+					<a href="#" class="more">
+						查看全部<span class="iconfont icon-arrow-right-bold"></span>
+					</a>
+				</div>
+			</div>
+		</div>
+
+		<div class="body">
+			<ul>
+				<li>
+					<a href="#">
+						<div class="pic">
+							<img src="./uploads/goods1.png">
+						</div>
+						<div class="text">
+							<h4>KN95级莫兰迪色防护口罩</h4>
+							<p>¥<span class="price">79</span></p>
+						</div>
+					</a>
+				</li>
+				<li>
+					<a href="#">
+						<div class="pic">
+							<img src="./uploads/goods1.png">
+						</div>
+						<div class="text">
+							<h4>KN95级莫兰迪色防护口罩</h4>
+							<p>¥<span class="price">79</span></p>
+						</div>
+					</a>
+				</li>
+				<li>
+					<a href="#">
+						<div class="pic">
+							<img src="./uploads/goods1.png">
+						</div>
+						<div class="text">
+							<h4>KN95级莫兰迪色防护口罩</h4>
+							<p>¥<span class="price">79</span></p>
+						</div>
+					</a>
+				</li>
+				<li>
+					<a href="#">
+						<div class="pic">
+							<img src="./uploads/goods1.png">
+						</div>
+						<div class="text">
+							<h4>KN95级莫兰迪色防护口罩</h4>
+							<p>¥<span class="price">79</span></p>
+						</div>
+					</a>
+				</li>
+			</ul>
+		</div>
+	</div>
+
 	<div class="footer">
 		<div class="wrapper">
 			<div class="service">
