--- a/xtx-pc/index.html
+++ b/xtx-pc/index.html
@@ -372,53 +372,150 @@
 			</div>
 		</div>
 
-		<div class="body">
-			<ul>
-				<li>
-					<a href="#">
-						<div class="pic">
-							<img src="./uploads/goods1.png">
-						</div>
-						<div class="text">
-							<h4>KN95级莫兰迪色防护口罩</h4>
-							<p>¥<span class="price">79</span></p>
-						</div>
-					</a>
-				</li>
-				<li>
-					<a href="#">
-						<div class="pic">
-							<img src="./uploads/goods1.png">
-						</div>
-						<div class="text">
-							<h4>KN95级莫兰迪色防护口罩</h4>
-							<p>¥<span class="price">79</span></p>
-						</div>
-					</a>
-				</li>
-				<li>
-					<a href="#">
-						<div class="pic">
-							<img src="./uploads/goods1.png">
-						</div>
-						<div class="text">
-							<h4>KN95级莫兰迪色防护口罩</h4>
-							<p>¥<span class="price">79</span></p>
-						</div>
-					</a>
-				</li>
-				<li>
-					<a href="#">
-						<div class="pic">
-							<img src="./uploads/goods1.png">
-						</div>
-						<div class="text">
-							<h4>KN95级莫兰迪色防护口罩</h4>
-							<p>¥<span class="price">79</span></p>
-						</div>
-					</a>
-				</li>
-			</ul>
+		<div class="content">
+			<div class="left">
+				<img src="./uploads/fresh_left.png">
+			</div>
+			<div class="right">
+				<ul>
+					<li>
+						<a href="#">
+							<div class="pic">
+								<img src="./uploads/fresh1.png">
+							</div>
+							<div class="text">
+								<div class="info">
+									<h4>双味千层，手抓饼烤肉组合</h4>
+									<p>240g/袋 4片装</p>
+									<p>加热即食</p>
+								</div>
+								<div class="price">
+									¥<span>89.99</span>
+								</div>
+							</div>
+						</a>
+					</li>
+					<li>
+						<a href="#">
+							<div class="pic">
+								<img src="./uploads/fresh1.png">
+							</div>
+							<div class="text">
+								<div class="info">
+									<h4>双味千层，手抓饼烤肉组合</h4>
+									<p>240g/袋 4片装</p>
+									<p>加热即食</p>
+								</div>
+								<div class="price">
+									¥<span>89.99</span>
+								</div>
+							</div>
+						</a>
+					</li>
+					<li>
+						<a href="#">
+							<div class="pic">
+								<img src="./uploads/fresh1.png">
+							</div>
+							<div class="text">
+								<div class="info">
+									<h4>双味千层，手抓饼烤肉组合</h4>
+									<p>240g/袋 4片装</p>
+									<p>加热即食</p>
+								</div>
+								<div class="price">
+									¥<span>89.99</span>
+								</div>
+							</div>
+						</a>
+					</li>
+					<li>
+						<a href="#">
+							<div class="pic">
+								<img src="./uploads/fresh1.png">
+							</div>
+							<div class="text">
+								<div class="info">
+									<h4>双味千层，手抓饼烤肉组合</h4>
+									<p>240g/袋 4片装</p>
+									<p>加热即食</p>
+								</div>
+								<div class="price">
+									¥<span>89.99</span>
+								</div>
+							</div>
+						</a>
+					</li>
+					<li>
+						<a href="#">
+							<div class="pic">
+								<img src="./uploads/fresh1.png">
+							</div>
+							<div class="text">
+								<div class="info">
+									<h4>双味千层，手抓饼烤肉组合</h4>
+									<p>240g/袋 4片装</p>
+									<p>加热即食</p>
+								</div>
+								<div class="price">
+									¥<span>89.99</span>
+								</div>
+							</div>
+						</a>
+					</li>
+					<li>
+						<a href="#">
+							<div class="pic">
+								<img src="./uploads/fresh1.png">
+							</div>
+							<div class="text">
+								<div class="info">
+									<h4>双味千层，手抓饼烤肉组合</h4>
+									<p>240g/袋 4片装</p>
+									<p>加热即食</p>
+								</div>
+								<div class="price">
+									¥<span>89.99</span>
+								</div>
+							</div>
+						</a>
+					</li>
+					<li>
+						<a href="#">
+							<div class="pic">
+								<img src="./uploads/fresh1.png">
+							</div>
+							<div class="text">
+								<div class="info">
+									<h4>双味千层，手抓饼烤肉组合</h4>
+									<p>240g/袋 4片装</p>
+									<p>加热即食</p>
+								</div>
+								<div class="price">
+									¥<span>89.99</span>
+								</div>
+							</div>
+						</a>
+					</li>
+					<li>
+						<a href="#">
+							<div class="pic">
+								<img src="./uploads/fresh1.png">
+							</div>
+							<div class="text">
+								<div class="info">
+									<h4>双味千层，手抓饼烤肉组合</h4>
+									<p>240g/袋 4片装</p>
+									<p>加热即食</p>
+								</div>
+								<div class="price">
+									¥<span>89.99</span>
+								</div>
+							</div>
+						</a>
+					</li>
+				</ul>
+			</div>
 		</div>
 	</div>
 
