--- a/test.html
+++ b/test.html
@@ -8,13 +8,15 @@
     <!-- <link rel="stylesheet" href="./shop1/css/base.css"> -->
      <link rel="stylesheet" href="./0704/fontello/css/fontello.css">
     <style>
-
+        img {
+            width: 200px;
+        }
     </style>
 </head>
 
 <body>
     <div>
-        <img src="./images/banner1.jpg">
+        <img src="./images/Sun1.jpg">
         <i class="iconfont-left-open"></i>
         <i class="iconfont-right-open"></i>
     </div>
