--- a/xtx-pc/index.html
+++ b/xtx-pc/index.html
@@ -394,6 +394,11 @@
 								</div>
 							</div>
 						</a>
+						<div class="cover">
+							<p>找相似</p>
+							<p></p>
+							<p>发现更多宝贝<span class="iconfont icon-arrow-right-bold"></span></p>
+						</div>
 					</li>
 					<li>
 						<a href="#">
@@ -411,6 +416,11 @@
 								</div>
 							</div>
 						</a>
+						<div class="cover">
+							<p>找相似</p>
+							<p></p>
+							<p>发现更多宝贝<span class="iconfont icon-arrow-right-bold"></span></p>
+						</div>
 					</li>
 					<li>
 						<a href="#">
@@ -428,6 +438,11 @@
 								</div>
 							</div>
 						</a>
+						<div class="cover">
+							<p>找相似</p>
+							<p></p>
+							<p>发现更多宝贝<span class="iconfont icon-arrow-right-bold"></span></p>
+						</div>
 					</li>
 					<li>
 						<a href="#">
@@ -445,6 +460,11 @@
 								</div>
 							</div>
 						</a>
+						<div class="cover">
+							<p>找相似</p>
+							<p></p>
+							<p>发现更多宝贝<span class="iconfont icon-arrow-right-bold"></span></p>
+						</div>
 					</li>
 					<li>
 						<a href="#">
@@ -462,6 +482,11 @@
 								</div>
 							</div>
 						</a>
+						<div class="cover">
+							<p>找相似</p>
+							<p></p>
+							<p>发现更多宝贝<span class="iconfont icon-arrow-right-bold"></span></p>
+						</div>
 					</li>
 					<li>
 						<a href="#">
@@ -479,6 +504,11 @@
 								</div>
 							</div>
 						</a>
+						<div class="cover">
+							<p>找相似</p>
+							<p></p>
+							<p>发现更多宝贝<span class="iconfont icon-arrow-right-bold"></span></p>
+						</div>
 					</li>
 					<li>
 						<a href="#">
@@ -496,6 +526,11 @@
 								</div>
 							</div>
 						</a>
+						<div class="cover">
+							<p>找相似</p>
+							<p></p>
+							<p>发现更多宝贝<span class="iconfont icon-arrow-right-bold"></span></p>
+						</div>
 					</li>
 					<li>
 						<a href="#">
@@ -513,6 +548,11 @@
 								</div>
 							</div>
 						</a>
+						<div class="cover">
+							<p>找相似</p>
+							<p></p>
+							<p>发现更多宝贝<span class="iconfont icon-arrow-right-bold"></span></p>
+						</div>
 					</li>
 				</ul>
 			</div>
