--- a/xtx-pc/index.html
+++ b/xtx-pc/index.html
@@ -559,6 +559,134 @@
 		</div>
 	</div>
 
+	<div class="topic wrapper">
+		<div class="title">
+			<div class="left">
+				<h3>最新专题</h3>
+			</div>
+			<div class="right">
+				<div class="more">
+					<a href="#" class="more">
+						查看全部<span class="iconfont icon-arrow-right-bold"></span>
+					</a>
+				</div>
+			</div>
+		</div>
+
+		<div class="topic-body">
+			<ul>
+				<li>
+					<a href="#">
+						<div class="pic">
+							<img src="./uploads/topic1.png">
+							<div class="cover">
+								<div class="left">
+									<h4>吃这些美食才不算辜负自己</h4>
+									<p>餐厨起居洗护好物</p>
+								</div>
+								<div class="right">
+									¥
+									<span>29.9</span>
+									<span>起</span>
+								</div>
+							</div>
+						</div>
+						<div class="text">
+							<div class="left">
+								<p>
+									<span class="iconfont icon-favorites-fill"></span>
+									<i>1280</i>
+								</p>
+								<p>
+									<span class="iconfont icon-browse"></span>
+									<i>1280</i>
+								</p>
+							</div>
+							<div class="right">
+								<p>
+									<span class="iconfont icon-comment"></span>
+									<i>1280</i>
+								</p>
+							</div>
+						</div>
+					</a>
+				</li>
+				<li>
+					<a href="#">
+						<div class="pic">
+							<img src="./uploads/topic1.png">
+							<div class="cover">
+								<div class="left">
+									<h4>吃这些美食才不算辜负自己</h4>
+									<p>餐厨起居洗护好物</p>
+								</div>
+								<div class="right">
+									¥
+									<span>29.9</span>
+									<span>起</span>
+								</div>
+							</div>
+						</div>
+						<div class="text">
+							<div class="left">
+								<p>
+									<span class="iconfont icon-favorites-fill"></span>
+									<i>1280</i>
+								</p>
+								<p>
+									<span class="iconfont icon-browse"></span>
+									<i>1280</i>
+								</p>
+							</div>
+							<div class="right">
+								<p>
+									<span class="iconfont icon-comment"></span>
+									<i>1280</i>
+								</p>
+							</div>
+						</div>
+					</a>
+				</li>
+				<li>
+					<a href="#">
+						<div class="pic">
+							<img src="./uploads/topic1.png">
+							<div class="cover">
+								<div class="left">
+									<h4>吃这些美食才不算辜负自己</h4>
+									<p>餐厨起居洗护好物</p>
+								</div>
+								<div class="right">
+									¥
+									<span>29.9</span>
+									<span>起</span>
+								</div>
+							</div>
+						</div>
+						<div class="text">
+							<div class="left">
+								<p>
+									<span class="iconfont icon-favorites-fill"></span>
+									<i>1280</i>
+								</p>
+								<p>
+									<span class="iconfont icon-browse"></span>
+									<i>1280</i>
+								</p>
+							</div>
+							<div class="right">
+								<p>
+									<span class="iconfont icon-comment"></span>
+									<i>1280</i>
+								</p>
+							</div>
+						</div>
+					</a>
+				</li>
+			</ul>
+		</div>
+	</div>
+
 	<div class="footer">
 		<div class="wrapper">
 			<div class="service">
