--- a/template.html
+++ b/template.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>Document</title>
-	<link rel="stylesheet" href="../shop1/css/base.css" />
+	<link rel="stylesheet" href="..xtx-pc/css/base.css" />
 	<style></style>
 </head>
 
