--- a/mobile-3/03---flexible-js.html
+++ b/mobile-3/03---flexible-js.html
@@ -11,10 +11,18 @@
                 background-color: green;
             }
         }
+        div {
+            width: 5rem;
+            height: 3rem;
+            background-color: pink;
+        }
     </style>
 </head>
 
 <body>
+
+    <div></div>
+    <script src="./js/flexible.js"></script>
 
 </body>
 
