--- a/jswz-phone/index.html
+++ b/jswz-phone/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,7 +8,39 @@
     <link rel="stylesheet" href="./iconfont/iconfont.css">
     <link rel="stylesheet" href="./css/index.css">
 </head>
+
 <body>
+    <header>
+        <a href="#" class="back iconfont icon-left"></a>
+        <h3>极速问诊</h3>
+        <a href="#" class="note">问诊记录</a>
+    </header>
+
+    <div class="banner">
+        <img src="./assets/entry.png">
+        <p><span>20s</span> 快速匹配专业医生</p>
+    </div>
+
+    <div class="type">
+        <ul>
+            <li>
+                <a href="#">
+                    <img src="./assets/type01.png" class="pic">
+                    <div class="text">aaa</div>
+                    <span class="iconfont icon-right"></span>
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <img src="./assets/type02.png" class="pic">
+                    <div class="text">aaa</div>
+                    <span class="iconfont icon-right"></span>
+                </a>
+            </li>
+        </ul>
+    </div>
+
     <script src="./js/flexible.js"></script>
 </body>
+
 </html>
