--- a/jswz-phone/index.html
+++ b/jswz-phone/index.html
@@ -25,15 +25,21 @@
         <ul>
             <li>
                 <a href="#">
-                    <img src="./assets/type01.png" class="pic">
-                    <div class="text">aaa</div>
+                    <img src="./assets/type01.png">
+                    <div class="text">
+                        <h4>三甲图文问诊</h4>
+                        <p>三甲主治及以上级别医生</p>
+                    </div>
                     <span class="iconfont icon-right"></span>
                 </a>
             </li>
             <li>
                 <a href="#">
-                    <img src="./assets/type02.png" class="pic">
-                    <div class="text">aaa</div>
+                    <img src="./assets/type02.png">
+                    <div class="text">
+                        <h4>普通图文问诊</h4>
+                        <p>二甲主治及以上级别医生</p>
+                    </div>
                     <span class="iconfont icon-right"></span>
                 </a>
             </li>
