--- a/kwyy/index.html
+++ b/kwyy/index.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="./css/index.css">
 </head>
 <body>
+    <header>
+        <img src="./assets/head.png" class="logo">
+        <a href="#" class="download">下载APP</a>
+    </header>
     
 </body>
 </html>
