--- a/kwyy/index.html
+++ b/kwyy/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,11 +8,40 @@
     <link rel="stylesheet" href="./iconfont/iconfont.css">
     <link rel="stylesheet" href="./css/index.css">
 </head>
+
 <body>
     <header>
         <img src="./assets/head.png" class="logo">
         <a href="#" class="download">下载APP</a>
     </header>
-    
+
+    <div class="search">
+        <div class="text">
+            <span class="iconfont icon-sousuo"></span>
+            <span>搜索你想听的歌曲</span>
+        </div>
+    </div>
+
+    <div class="banner">
+        <ul>
+            <li>
+                <a href="#">
+                    <img src="./assets/banner01.jpeg">
+                </a>
+            </li>
+        </ul>
+    </div>
+
+    <div class="list">
+        <div class="title">
+            <h4>酷我排行榜</h4>
+            <a href="#">
+                更多
+                <span class="iconfont icon-right"></span>
+            </a>
+        </div>
+    </div>
+
 </body>
+
 </html>
