--- a/kwyy/index.html
+++ b/kwyy/index.html
@@ -36,9 +36,106 @@
         <div class="title">
             <h4>酷我排行榜</h4>
             <a href="#">
-                更多
-                <span class="iconfont icon-right"></span>
+                更多<span class="iconfont icon-right"></span>
             </a>
+        </div>
+        <div class="content">
+            <ul>
+                <li>
+                    <img src="./assets/icon_rank_hot.png">
+                    <div class="text">
+                        <a href="#" class="more">酷我热歌榜<span class="iconfont icon-right"></span></a>
+                        <a href="#">1.樱花树下的约定（完整版） - 旺仔小乔</a>
+                        <a href="#">2.就让这大雨全都落下 - 容祖儿</a>
+                        <a href="#">3.缺氧 - 轩姨（相信光）</a>
+                    </div>
+                </li>
+                <li>
+                    <img src="./assets/icon_rank_hot.png">
+                    <div class="text">
+                        <a href="#" class="more">酷我热歌榜<span class="iconfont icon-right"></span></a>
+                        <a href="#">1.樱花树下的约定（完整版） - 旺仔小乔</a>
+                        <a href="#">2.就让这大雨全都落下 - 容祖儿</a>
+                        <a href="#">3.缺氧 - 轩姨（相信光）</a>
+                    </div>
+                </li>
+                <li>
+                    <img src="./assets/icon_rank_hot.png">
+                    <div class="text">
+                        <a href="#" class="more">酷我热歌榜<span class="iconfont icon-right"></span></a>
+                        <a href="#">1.樱花树下的约定（完整版） - 旺仔小乔</a>
+                        <a href="#">2.就让这大雨全都落下 - 容祖儿</a>
+                        <a href="#">3.缺氧 - 轩姨（相信光）</a>
+                    </div>
+                </li>
+            </ul>
+        </div>
+    </div>
+
+    <div class="recommend">
+        <div class="title">
+            <h4>推荐歌单</h4>
+            <a href="#">
+                更多<span class="iconfont icon-right"></span>
+            </a>
+        </div>
+        <div class="content">
+            <ul>
+                <li>
+                    <a href="#">
+                        <div class="pic">
+                            <img src="./assets/song01.jpeg">
+                            <div class="cover">18.2W</div>
+                        </div>
+                        <div class="text">抖音嗨爆DJ！劲爆旋律萦绕双耳</div>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <div class="pic">
+                            <img src="./assets/song01.jpeg">
+                            <div class="cover">18.2W</div>
+                        </div>
+                        <div class="text">抖音嗨爆DJ！劲爆旋律萦绕双耳</div>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <div class="pic">
+                            <img src="./assets/song01.jpeg">
+                            <div class="cover">18.2W</div>
+                        </div>
+                        <div class="text">抖音嗨爆DJ！劲爆旋律萦绕双耳</div>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <div class="pic">
+                            <img src="./assets/song01.jpeg">
+                            <div class="cover">18.2W</div>
+                        </div>
+                        <div class="text">抖音嗨爆DJ！劲爆旋律萦绕双耳</div>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <div class="pic">
+                            <img src="./assets/song01.jpeg">
+                            <div class="cover">18.2W</div>
+                        </div>
+                        <div class="text">抖音嗨爆DJ！劲爆旋律萦绕双耳</div>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <div class="pic">
+                            <img src="./assets/song01.jpeg">
+                            <div class="cover">18.2W</div>
+                        </div>
+                        <div class="text">抖音嗨爆DJ！劲爆旋律萦绕双耳</div>
+                    </a>
+                </li>
+            </ul>
         </div>
     </div>
 
