--- a/kwyy/index.html
+++ b/kwyy/index.html
@@ -139,6 +139,12 @@
         </div>
     </div>
 
+    <div class="download">
+        <img src="./assets/logo.png">
+        <p>安装酷我音乐 发现更多好音乐</p>
+        <span class="iconfont icon-right"></span>
+    </div>
+
 </body>
 
 </html>
