--- a/kwyy/index.html
+++ b/kwyy/index.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <img src="./assets/head.png" class="logo">
-        <a href="#" class="download">下载APP</a>
+        <a href="#">下载APP</a>
     </header>
 
     <div class="search">
