--- a/mobile-5/bootstrap-表格.html
+++ b/mobile-5/bootstrap-表格.html
@@ -10,7 +10,7 @@
 
 <body>
 
-    <table class="table table-striped table-hover">
+    <table class="table table-striped table-hover table-bordered border-primary">
         <tr class="table-success">
             <th>姓名</th>
             <th>年龄</th>
