--- a/test.html
+++ b/test.html
@@ -2,36 +2,30 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        .father {
-            /* margin: 100px auto; */
-            margin: 900px 0px 0px 1500px;
-            width: 300px;
-            height: 300px;
-            perspective: 1000px;
-            border: 1px solid black;
+        @media (width:375px) {
+            body {
+                background-color: green;
+                width: 500px;
+                height: 500px;
+            }
         }
 
-        .son {
-            width: 100px;
-            height: 100px;
-            background-color: pink;
-        }
-
-        .son:hover {
-            /* transform: translateZ(100px); */
-            transform: translateZ(-100px);
+        @media (width:359.2px) {
+            body {
+                background-color: green;
+                width: 500px;
+                height: 500px;
+            }
         }
     </style>
 </head>
 
 <body>
-    <div class="father">
-        <div class="son"></div>
-    </div>
+    <div>aaa</div>
 </body>
 
 </html>
