--- a/javascript-learn/JavaScript基础/day01/003---数组.html
+++ b/javascript-learn/JavaScript基础/day01/003---数组.html
@@ -14,6 +14,7 @@
         console.log(names);
         console.log(names[0]);
         console.log(names[4]);
+        console.log(names.length);
 
     </script>
 </body>
