--- a/javascript-learn/JavaScript基础/day01/004---形参可以给默认值.html
+++ b/javascript-learn/JavaScript基础/day01/004---形参可以给默认值.html
@@ -17,7 +17,7 @@
         getSum(1)
         getSum()
 
-        function getArrSum(arr) {
+        function getArrSum(arr = []) {
             let sum = 0
             for (let i = 0; i < arr.length; i++) {
                 sum += arr[i]
