--- a/javascript-learn/JavaScript基础/day01/007---逻辑中断.html
+++ b/javascript-learn/JavaScript基础/day01/007---逻辑中断.html
@@ -25,7 +25,7 @@
         console.log(undefined || 0); // 返回0
         console.log(!undefined); // 返回true
 
-        if ('' || 0 || undefined || null || NaN) { // 这些在逻辑运算中都是false
+        if ('' || 0 || undefined || null || NaN) { // 这些在逻辑运算中都是假值
             console.log('不全是false');
         } else {
             console.log('全是false');
