--- a/javascript-learn/JavaScript基础/009---Math.html
+++ b/javascript-learn/JavaScript基础/009---Math.html
@@ -28,6 +28,12 @@
         console.log(Math.abs(-1)); // 1
         // 幂运算
         console.log(Math.pow(2, 3)); // 8
+        // 平方根
+        console.log(Math.sqrt(9)); // 3
+        // 生成m到n之间的整数
+        let m = 222
+        let n = 111
+        console.log(Math.floor(Math.random() * (m - n + 1)) + n);
     </script>
 </body>
 
