--- a/javascript-learn/JavaScript基础/010---通过style属性修改样式.html
+++ b/javascript-learn/JavaScript基础/010---通过style属性修改样式.html
@@ -22,6 +22,8 @@
         box.style.border = '2px solid red'
         box.style.backgroundColor = 'blue' // 小驼峰
         box.style.borderTop = '5px solid green' // 小驼峰
+
+        const body = document.body // 获取body可以直接写document.body
     </script>
 </body>
 
