--- a/javascript-learn/JavaScript基础/012---通过ClassList修改样式.html
+++ b/javascript-learn/JavaScript基础/012---通过ClassList修改样式.html
@@ -27,6 +27,8 @@
         box.classList.add('active') // 添加类
         box.classList.remove('box') // 删除类
         box.classList.toggle('box') // 没有就添加类，有就删除类
+        box.classList.add('box') // 已经有了就不会重复添加
+        box.classList.add('active') // 已经有了就不会重复添加
     </script>
 </body>
 
