--- a/javascript-learn/webAPI/第一天/08---轮播图.html
+++ b/javascript-learn/webAPI/第一天/08---轮播图.html
@@ -127,7 +127,21 @@
       // { url: './images/slider08.jpg', title: '谁不想和小猫咪贴贴呢！', color: 'rgb(99, 72, 114)' },
     ]
 
-    
+    const img = document.querySelector('.slider-wrapper img')
+    const p = document.querySelector('.slider-footer p')
+    const sliderFooter = document.querySelector('.slider-footer')
+    let i = 0
+    setInterval(function () {
+      i++
+      if (i >= sliderData.length) {
+        i = 0
+      }
+      img.src = sliderData[i].url
+      p.innerHTML = sliderData[i].title
+      sliderFooter.style.backgroundColor = sliderData[i].color
+      document.querySelector('ul .active').classList.remove('active')
+      document.querySelector(`ul li:nth-child(${i + 1})`).classList.add('active')
+    }, 1000)
   </script>
 </body>
 
