--- a/javascript-learn/webAPI/第二天/01---点击关闭.html
+++ b/javascript-learn/webAPI/第二天/01---点击关闭.html
@@ -39,13 +39,13 @@
         <div class="box1">X</div>
     </div>
 
-    <!-- <script>
+    <script>
         const box = document.querySelector('.box')
         const box1 = document.querySelector('.box1')
         box.addEventListener('click', function () {
             box.style.display = 'none'
         })
-    </script> -->
+    </script>
 </body>
 
 </html>
